﻿0.1
- Initial release
...

[B]Version 0.40  (16.09.2018)[/B] by realvito
- fixed: In der Rubrik "LIVE" werden nicht alle Spiele gelistet
- fixed: Die Auswahlfunktion in der Rubrik "Highlights" ist fehlerhaft und es werden nicht alle Ergebnisse angezeigt
- fixed: In der Rubrik "Topclips" werden nur Fehler produziert
- fixed: Scriptfehler bereinigt
- added: Rubriken = Ligen mit Auswahlfunktion, Archiv mit Auswahlfunktion, Übersicht - Highlights, Übersicht - Aufzeichnungen
- optimized: Icon aktualisiert und Fanart hinzugefügt